--- a/public/tpl/about.html
+++ b/public/tpl/about.html
@@ -4,7 +4,7 @@
       <div class="row m-t">
         <div class="col-sm-7">
           <a href="" class="thumb-lg pull-left m-r">
-            <img src="img/a0.jpg" class="img-circle">
+            <img src="img/cc.png" class="img-circle">
           </a>
           <div class="clear m-b">
             <div class="m-b m-t-sm">
