--- a/public/tpl/blocks/nav.html
+++ b/public/tpl/blocks/nav.html
@@ -2,7 +2,7 @@
 <ul class="nav">
 
   <li ui-sref-active="active">
-    <a ui-sref="blog.list({tag:null})">
+    <a ui-sref="blog.list()">
       <i class="glyphicon glyphicon-edit text-info-dker"></i>
       <span class="font-bold" >所有日志</span>
     </a>
