修改分页按钮状态；修改左侧目录图标；修改头部小图标

--- a/public/tpl/blocks/header.html
+++ b/public/tpl/blocks/header.html
@@ -8,6 +8,7 @@
   </button>
   <!-- brand -->
   <a href="#/" class="navbar-brand text-lt">
+    <i class="fa fa-btc"></i> 
     <span class="hidden-folded m-l-xs">coolcao的小站</span>
   </a>
   <!-- / brand -->
