--- a/public/tpl/blocks/nav.html
+++ b/public/tpl/blocks/nav.html
@@ -3,7 +3,7 @@
 
   <li ui-sref-active="active">
     <a ui-sref="blog.list()">
-      <i class="glyphicon glyphicon-edit text-info-dker"></i>
+      <i class="glyphicon glyphicon-list text-info-dker"></i>
       <span class="font-bold" >所有日志</span>
     </a>
   </li>
