--- a/public/tpl/blocks/nav.html
+++ b/public/tpl/blocks/nav.html
@@ -1,5 +1,5 @@
 <!-- list -->
-<ul class="nav">
+<ul class="nav" ng-controller="navController">
 
   <li ui-sref-active="active">
     <a ui-sref="blog.list()">
@@ -14,6 +14,29 @@
       <span class="font-bold" >标签分类</span>
     </a>
   </li> -->
+  <li ng-init="getCatalogs()">
+    <a href class="auto">
+      <span class="pull-right text-muted">
+        <i class="fa fa-fw fa-angle-right text"></i>
+        <i class="fa fa-fw fa-angle-down text-active"></i>
+      </span>
+      <i class="glyphicon glyphicon-th-large icon text-success"></i>
+      <span class="font-bold">目录分类</span>
+    </a>
+    <ul class="nav nav-sub dk">
+      <li class="nav-sub-header">
+        <a href>
+          <span>目录分类</span>
+        </a>
+      </li>
+      <li ng-repeat="catalog in catalogValues" ui-sref-active="active">
+        <a ui-sref="blog.list({catalog:catalog.catalog,tag:null,page:1})">
+          <b class="badge bg-info pull-right">{{catalog.count}}</b>
+          <span>{{catalog.catalog}}</span>
+        </a>
+      </li>
+    </ul>
+  </li>
   <li ui-sref-active="active">
     <a ui-sref="about.me">
       <i class="glyphicon glyphicon-user icon text-info-lter"></i>
