完善表现样式

--- a/public/tpl/blocks/aside.html
+++ b/public/tpl/blocks/aside.html
@@ -6,7 +6,7 @@
     <!-- user -->
     <div class="clearfix hidden-xs text-center show" id="aside-user">
       <div class="dropdown wrapper" dropdown>
-        <a ui-sref="blog.list()">
+        <a ui-sref="blog.list({page:null,tag:null,catalog:null})">
           <span class="thumb-lg w-auto-folded avatar m-t-sm">
             <img src="img/cc.png" class="img-full" alt="...">
           </span>
