--- a/public/tpl/blocks/header.html
+++ b/public/tpl/blocks/header.html
@@ -7,7 +7,7 @@
   <i class="glyphicon glyphicon-align-justify"></i>
   </button>
   <!-- brand -->
-  <a href="#/" class="navbar-brand text-lt">
+  <a ui-sref="blog.list({tag:null,catalog:null,page:null})" class="navbar-brand text-lt">
     <i class="fa fa-btc"></i> 
     <span class="hidden-folded m-l-xs">coolcao的小站</span>
   </a>
