--- a/public/tpl/blocks/right_nav.html
+++ b/public/tpl/blocks/right_nav.html
@@ -1,4 +1,4 @@
-<div class="col-sm-3" >
+<div class="col-sm-12 col-xs-12 col-md-3 col-lg-3" >
   <div  ng-controller="TagsController" ng-init="tags()">
     
     <h5 class="font-bold">标签</h5>
