修改前端获取数据形式，不再使用localstorage

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 
   <!-- jQuery -->
   <script src="vendor/jquery/jquery.min.js"></script>
+  <script type="text/javascript" src="vendor/jquery/showdown/dist/showdown.min.js"></script>
 
   <!-- Angular -->
   <script src="vendor/angular/angular.js"></script>
@@ -27,7 +28,8 @@
   <script src="vendor/angular/angular-resource/angular-resource.js"></script>
   <script src="vendor/angular/angular-sanitize/angular-sanitize.js"></script>
   <script src="vendor/angular/angular-touch/angular-touch.js"></script>
-<!-- Vendor -->
+  <!-- Vendor -->
+  <script type="text/javascript" src="vendor/angular/ng-showdown/dist/ng-showdown.min.js"></script>
   <script src="vendor/angular/angular-ui-router/angular-ui-router.js"></script> 
   <script src="vendor/angular/ngstorage/ngStorage.js"></script>
 
