--- a/public/tpl/blocks/right_nav.html
+++ b/public/tpl/blocks/right_nav.html
@@ -16,9 +16,9 @@
     </div> 
 
   </div>
-  <h5 class="font-bold">最近发表</h5>
+  <h5 class="font-bold">最近更新</h5>
   <div ng-controller="BlogListController" ng-init="recent()">
-    <div ng-repeat="blog in blogs">
+    <div ng-repeat="blog in recents">
       <div>
         <a class="pull-left thumb thumb-wrapper m-r">
           <img src="img/b0.jpg">
